--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,88 +1,151 @@
+header {
+    display: block;
+    unicode-bidi: isolate;
+    margin-bottom: 5px;
+}
+.container{
+  border: 2px solid black;
+  }
+
+.navbar .container {
+    margin-bottom: 0px;
+    height: auto;
+}
+.navbar-brand {
+  display: inline-block;
+  width: 70%;
+  height: auto;
+  position: relative;
+  float: left;
+  text-decoration: none;
+  text-align: left;
+}
 #header-nav {
   background-color: #afafaf;
   border-radius: 0;
   border: 0;
-}
-.navbar-brand {
-  padding-top: 10px;
-  width: 75%;
+  height: auto;
+  width: 100%;
+  text-align: center;
+  margin-bottom: 5px;
 }
 .navbar-brand h1 { /* Restaurant name */
+  width:75%;
   font-family: sans-serif;
   color: black;
   font-size: 2em;
   font-weight: bold;
-  margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 5px;
   text-decoration: none;
-  text-align: left;
 }
-/*button{
-  float: right;
-  margin: 5px 5px 0px 0px;
-  padding: 5px;
-}*/
+.dropbtn {
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
 
-.navbar-brand a:hover, .navbar-brand a:focus {
-  text-decoration: none;
+
+/* Dropdown button on hover & focus */
+
+.dropbtn:hover,
+.dropbtn:focus {
+  background-color: grey;
 }
-.navbar-header button.navbar-toggle, .navbar-header .icon-bar {
-  border: 1px solid black;
+
+
+/* The container <div> - needed to position the dropdown content */
+
+.dropdown {
+  position: relative;
+  display: inline-block;
 }
-.navbar-header button.navbar-toggle {
-  clear: both;
- /* margin-top: -30px;*/
+
+
+/* Dropdown Content (Hidden by Default) */
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 150px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
 }
-#nav-list {
-  margin-top: 10px;
-}
-#nav-list a {
+
+
+/* Links inside the dropdown */
+
+.dropdown-content a {
   color: black;
-  text-align: center;
+  padding: 12px 16px;
   text-decoration: none;
+  display: block;
 }
-#nav-list a:hover {
-  background:#afafaf;
+/* Change color of dropdown links on hover */
+#myDropdown a:hover {
+  background-color: #f1f1f1
 }
-#nav-list a span {
-  font-size: 1.8em;
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content 
+    container when the user clicks on the dropdown button) */
+.show {
+  display: block;
 }
+a {
+  text-decoration: none;
+}  
+img {
+  height: 30px;
+  overflow: auto;
+  background-color: transparent;
+  float: right;
+} 
 h1 {
   font-family: sans-serif;
   font-size: 1.75em;
   padding: 10px;
+  display: inline;
+  text-decoration: none;
+  text-align: center;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+.Our-menu h1 {
+  font-family: sans-serif;
+  font-size: 1.75em;
+  display: inline-block;
+  text-decoration: none;
+  text-align: center;
+  font-weight: bold;
+  height: 40px;
 }
 section {
   background-color:#afafaf;
   font-family: arial;
   text-align: center;
-  margin:0px;
+  font-weight: normal;
+  margin-block: 0px 0px 0px;
   overflow: auto;
   border: 5px solid white;
   }
-.content {
-  margin: 5px;
-}
-.row {
-  width: 100%;
-}
 h2 {
-  font-size: 1.25em;
+  font-size: 1.7em;
   position: relative;
   margin: 0px;
   padding: 10px;
   width: 100%;
-  font-weight: bold;
   text-align: center;
+  font-weight: bold;
   overflow: hidden;
 }
 p {
-  width: 90%;
-  height: 150px;
-  margin-right: auto;
-  margin-left: auto;
+  display: flex;
+  font-size: 1.2em;
   clear: right;
   text-align: left;
+  margin-inline-start: 10px;
+  margin-inline-end: 10px;
 }
 
 /********** Large devices only **********/
@@ -125,7 +188,10 @@ p {
   }
   .col-lg-12 {
     width: 100%;
-  }
+}
+.dropdown {
+  visibility: hidden;
+}
 }
 
 /********** Medium devices only **********/
@@ -170,6 +236,11 @@ p {
   .col-md-12 {
     width: 100%;
   }
+.dropdown{
+  visibility: hidden;
+}
+}
+
   /********** Small devices only **********/
 @media (min-width: 768px) and (max-width: 991px) 
 {
@@ -213,20 +284,4 @@ p {
     width: 100%;
   }
 }
-/********** Extra small devices only **********/
-@media (max-width: 768px) {
-  /* Header */
-  .navbar-brand {
-      height: 80px;
-  }
-  .navbar-brand h1 { 
-    padding-top: 10px;
-  }  
-    #collapsable-nav a { /* Collapsed nav menu text */
-    font-size: 1.2em;
-  }
-  #collapsable-nav a span { /* Collapsed nav menu glyph */
-    font-size: 1em;
-    margin-right: 5px;
-  }  /* End Header */
 }
